--- a/tags.html
+++ b/tags.html
@@ -1,30 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
         <title>LovelyMonkeyM - Tags</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="/theme/css/main.css" type="text/css" />
-
-        <!--[if IE]>
-                <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-
-        <!--[if lte IE 7]>
-                <link rel="stylesheet" type="text/css" media="all" href="/css/ie.css"/>
-                <script src="/js/IE8.js" type="text/javascript"></script><![endif]-->
-
-        <!--[if lt IE 7]>
-                <link rel="stylesheet" type="text/css" media="all" href="/css/ie6.css"/><![endif]-->
-
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="">LovelyMonkeyM </a></h1>
-                <nav>
-                    <a href="/category/life.html">Life</a>&nbsp;
-                    <a href="/category/linux.html">Linux</a>&nbsp;
-                </nav>
+                <h1><a href="">LovelyMonkeyM <strong></strong></a></h1>
         </header><!-- /#banner -->
+        <nav id="menu"><ul>
+        </ul></nav><!-- /#menu -->
     <h1>Tags for LovelyMonkeyM</h1>        <li><a href="/tag/certification.html">Certification</a> (1)</li>
         <li><a href="/tag/exam.html">Exam</a> (1)</li>
         <li><a href="/tag/life.html">Life</a> (1)</li>
@@ -32,33 +18,11 @@
         <li><a href="/tag/linuxvim.html">Linux，Vim</a> (1)</li>
         <li><a href="/tag/patent.html">Patent</a> (1)</li>
         <li><a href="/tag/tv.html">TV</a> (1)</li>
-        <section id="extras" class="body">
-                <div class="blogroll">
-                        <h2>blogroll</h2>
-                        <ul>
-                            <li><a href="http://getpelican.com/">Pelican</a></li>
-                            <li><a href="http://python.org/">Python.org</a></li>
-                            <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                            <li><a href="#">You can modify those links in your config file</a></li>
-                        </ul>
-                </div><!-- /.blogroll -->
-                <div class="social">
-                        <h2>social</h2>
-                        <ul>
-                            <li><a href="/" type="application/atom+xml" rel="alternate">atom feed</a></li>
-
-                            <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
-                        </ul>
-                </div><!-- /.social -->
-        </section><!-- /#extras -->
-
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                     Proudly powered by <a href="http://getpelican.com/">Pelican</a>, which takes great advantage of <a href="http://python.org">Python</a>. Theme is using <a href="http://github.com/getpelican/pelican-themes" target="_blank">cebong</a>.
+                Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
+                which takes great advantage of <a href="http://python.org">Python</a>.
                 </address><!-- /#about -->
-
         </footer><!-- /#contentinfo -->
-
 </body>
 </html>
