--- a/tags.html
+++ b/tags.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
 		<title>LovelyMonkeyM &mdash; Tags</title>
 		<meta charset="utf-8" />
@@ -19,17 +19,14 @@
 	<div id="container">
 		<div id="header">
 				<h1 id="site-title"><a href="">LovelyMonkeyM</a></h1>
-		</div><!-- /#banner -->
+<h2 id="site-description">There are no happy endings.Endings are the saddest part.So just give me a happy middle and a very happy start</h2>		</div><!-- /#banner -->
 		
 		<div id="menu">
 			<div class="menu-navigation-container">
 				<ul id="menu-navigation" class="menu">
 						<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/life.html">Life</a></li>
 						<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/linux.html">Linux</a></li>
-						<li  class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="http://getpelican.com/">Pelican</a></li>
-						<li  class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="http://python.org/">Python.org</a></li>
-						<li  class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-						<li  class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="#">You can modify those links in your config file</a></li>
+						<li  class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://lovelymonkeym.github.io">GitHub</a></li>
 
 				</ul>
 			</div> <!--/#menu-navigation-container-->
